-
Bug
-
Resolution: Done
-
P4: Low
-
5.7.1
-
Windows 10
-
64666b9ee0a0dc0a356e825a519fde566bddd2c9
STEPS TO REPRODUCE
1. Build and run the attached application on Windows.
2. Connect a French keyboard and switch to the French keyboard layout in the OS.
3. Observe that there are two menu entries, one with shortcut '6' and one with shortcut '-'.
4. Ensure the Application Output is visible in Qt Creator.
5. Press '-' on the French keyboard (which is unshifted).
EXPECTED: The shortcut for '-' is triggered.
ACTUAL: An ambiguous shortcut for '6' is reported in the app output.
I think this is caused by the fallback code in QWindowsKeyMapper::updatePossibleKeyCodes, which adds an unmodified key to the table using the virtual key from the event (in this case '6'), despite the fact that the OS has already correctly reported that the unmodified key is '&'. As a result, it will match against both '6' and '&' and will hence be ambiguous.
This is obviously a fairly serious problem for our French version as it renders any keyboard shortcuts using the top row of the keyboard unusable.
- is duplicated by
-
QTBUG-58135 Shortcuts requiring but not specifying Shift fail on Mac
-
- Closed
-
-
QTBUG-68538 Shortcut not working as expected with French Keyboard
-
- Closed
-
| For Gerrit Dashboard: QTBUG-57938 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 181764,2 | Windows: Check if the fallback key matches the shift modifier case too | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |